8/28 이민우+여인수

--- a/yeoinsu.escape/src/main/webapp/WEB-INF/resource/css/basicStyle.css
+++ b/yeoinsu.escape/src/main/webapp/WEB-INF/resource/css/basicStyle.css
@@ -79,3 +79,27 @@
 		color: gray;
 		
 	}
+	#mb1{
+      width: 50%;   
+      float: left;
+      background-color : #222;
+      border: 4px outset gray;
+      color: gray;
+      
+   }
+   #mb2{
+      width:25%;
+      float: left;
+      background-color : #222;
+      border : 4px outset gray;
+      color: gray;
+      
+   }
+   #mb3{
+      width:25%;
+      float: right;
+      background-color : #222;
+      border : 4px outset gray;
+      color: gray;
+      
+   }
